<resources>
    <string name="app_name">Aerotest</string>

    <!-- Airplane activity -->
    <string name="airplane">Airplane</string>

    <!-- Login activity -->
    <string name="main_url">https://ppls-edu.aeroflot.ru/login/index.php</string>
    <string name="intercept_url">https://ppls-edu.aeroflot.ru/my/</string>
    <string name="reload">Перезагрузить</string>

    <!-- Section activity -->
    <string name="answers">Ответы</string>
    <string name="select_a_section">Выберите раздел</string>
    <string name="section">Раздел:</string>
    <string name="press_back_again">Нажмите еще раз, чтобы выйти.</string>

    <!-- Subsection activity -->
    <string name="select_subsection">Выберите подраздел</string>
    <string name="subsection">Подраздел:</string>

    <!-- Topic activity -->
    <string name="select_a_topic">Выберите тему</string>
    <string name="topic">Тема:</string>

    <!-- Quiz activity -->
    <string name="question_number">Вопрос %s</string>
    <string name="next">Далее</string>
    <string name="finish">Завершить</string>
    <string name="double_click_to_answer">Кликните ещё раз для подтверждения ответа</string>

    <!-- Score activity -->
    <string name="your_score">Ваши результаты</string>
    <string name="total_questions">Всего вопросов</string>
    <string name="correct">Верно</string>
    <string name="wrong">Неверно</string>
    <string name="skipped">Пропущено</string>
    <string name="to_main_menu">В главное меню</string>
    <string name="start_again">Пройти заново</string>

    <!-- Answers activity -->
    <string name="correct_answer">Правильный ответ</string>
    <string name="explanation">Пояснение</string>

    <!-- Dialog fragment -->
    <string name="start">начать</string>
    <string name="cancel">отмена</string>
    <string name="leave_testing">Покинуть тестирование?</string>
    <string name="leave">покинуть</string>
    <string name="start_test_again">Начать тест заново?</string>
    <string name="topic_selected">Выбрана тема</string>
    <string name="ready_to_start">Готовы начать?</string>

    <!-- Search view -->
    <string name="search_hint">Поиск</string>
</resources>
