<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_container"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_container">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/tv_text1"
                style="@style/PromptText"
                android:layout_alignParentTop="true"
                android:text="@string/your_score" />

            <View
                android:id="@+id/view_1"
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_below="@id/tv_text1"
                android:background="@color/dark_blue" />

            <TextView
                android:id="@+id/tv_text2"
                style="@style/MainText"
                android:layout_below="@id/view_1"
                android:text="@string/total_questions" />

            <TextView
                android:id="@+id/tvTotalQuestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_text2"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="20"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView2"
                style="@style/MainText"
                android:text="@string/correct"
                android:layout_below="@id/tvTotalQuestions" />

            <com.morozov.quiz.utility.PieChart
                android:id="@+id/piechartCorrect"
                android:layout_width="153dp"
                android:layout_height="165dp"
                android:layout_below="@id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                />

            <TextView
                android:id="@+id/textView3"
                style="@style/MainText"
                android:text="@string/wrong"
                android:layout_below="@id/piechartCorrect" />

            <com.morozov.quiz.utility.PieChart
                android:id="@+id/piechartWrong"
                android:layout_width="153dp"
                android:layout_height="165dp"
                android:layout_below="@id/textView3"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp" />

            <Button
                android:id="@+id/btn_play_again"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/piechartWrong"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="0.5"
                android:background="@drawable/rectangle_orange"
                android:text="@string/start_again"
                android:textColor="@color/black" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
